# tibs

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  logs.txt  rust-toolchain.toml  tibs-as-root  tibs-as-root-drm
assets/shaders/background/: meshgradient.sksl
modules/nixos/tibs/: default.nix
rustamarine/: .clang-format  .gitignore  Cargo.toml  build.rs
rustamarine/cpp/: CMakeLists.txt  egl_sync.cpp  input-manager.cpp  opengl.cpp  renderbuffer.cpp  rustamarine.cpp  screen.cpp  segfault-handler.cpp
rustamarine/cpp/headers/: rustamarine.h
rustamarine/cpp/headers/rustamarine/internal/: egl_sync.h  input-manager.h  opengl.hpp  rustamarine.hpp  screen.hpp  utils.hpp
rustamarine/examples/: epilepsy_vsync_test.rs  mouse_cursor_example.rs
rustamarine/src/: input.rs  lib.rs  screen.rs  sys.rs
rustamarine/src/input/: keys.rs
shells/aquamarine-dev/: default.nix
shells/default/: default.nix
src/: animation.rs  app.rs  background.rs  clay_skia.rs  context.rs  cursor.rs  custom_elements.rs  fps_counter.rs  gl_errors.rs  gles_context.rs  input.rs  lib.rs  loading_screen.rs  login_screen.rs  main.rs  progress_watcher.rs  shader.rs  skia.rs  skia_clay.rs  skia_image_asset.rs  skia_shader_asset.rs  start_progress.rs  textbox.rs
src/components/: background.rs  cursor.rs  custom_elements.rs  textbox.rs
src/context/: drm.rs  glfw.rs
src/context/drm/: input.rs
src/context/glfw/: input.rs
src/gles_context/: drm.rs  glfw.rs
src/login/: login.rs  manager.rs  session_manager.rs
src/screens/: loading_screen.rs  login_screen.rs
src/skia/: clay_renderer.rs  context.rs
src/skia/asset_loaders/: image.rs  shader.rs
src/utils/: animation.rs  fps_counter.rs  frame_pool.rs  gl.rs  gl_errors.rs  tty.rs
systems/x86_64-linux/tibs-test-vm/: default.nix
