[package]
name = "tibs"
version = "0.1.0"
edition = "2021"

[dependencies]
glutin = "0.32.2"
raw-window-handle = "0.6.2"
drm = "0.14.1"
gbm = "0.18.0"
glfw = { version = "0.59.0", optional = true }
color-eyre = "0.6.3"
skia-safe = { version = "0.82.0", features = ["gl"] }
smol = "2.0.2"
zbus_systemd = { version = "0.25701.0", features = ["systemd1"] }
futures-util = "0.3.31"
assets_manager = { version = "0.12.4", features = ["hot-reloading"] }
rand = "0.9.0"
input = "0.9.1"
libc = "0.2.171"
xkbcommon = { version = "0.8.0", default-features = false }
hyprcursor = "0.0.3"
libhyprcursor-sys = "0.2.0"
cairo-rs = { version = "0.19.2", default-features = false }
uzers = "0.12.1"

[dependencies.clay-layout]
features = ["debug", "skia-renderer"]
git = "https://github.com/clay-ui-rs/clay"

[build-dependencies]
gl_generator = "0"

[features]
default = ["glfw"]
glfw = ["dep:glfw"]
