[package]
name = "tibs"
version = "0.1.0"
edition = "2021"
[workspace]
members = ["./rustamarine"]
[dependencies]
color-eyre = "0.6.3"
skia-safe = { version = "0.82.0", features = ["gl"] }
smol = "2.0.2"
zbus_systemd = { version = "0.25701.0", features = ["systemd1"] }
futures-util = "0.3.31"
assets_manager = { version = "0.12.4", features = ["hot-reloading"] }
rand = "0.9.0"
libc = "0.2.171"
hyprcursor = "0.0.3"
libhyprcursor-sys = "0.2.0"
cairo-rs = { version = "0.19.2", default-features = false }
uzers = "0.12.1"
env_logger = "0.11.8"
log = "0.4.27"
rustamarine = {path = "./rustamarine"}
[dependencies.clay-layout]
features = ["debug", "skia-renderer"]
git = "https://github.com/coffeeispower/clay-rs"

[build-dependencies]
gl_generator = "0"
