[package]
name = "tibs"
version = "0.1.0"
edition = "2021"
[workspace]
members = ["./rustamarine"]
[dependencies]
color-eyre = "0.6.3"
skia-safe = { version = "0.86.0", features = ["gl"] }
smol = "2.0.2"
zbus_systemd = { version = "0.25701.0", features = ["login1", "systemd1"] }
futures-util = "0.3.31"
assets_manager = { version = "0.12.4", features = ["hot-reloading"] }
rand = "0.9.0"
hyprcursor = "0.0.3"
libhyprcursor-sys = "0.2.0"
cairo-rs = { version = "0.19.2", default-features = false }
uzers = "0.12.1"
env_logger = "0.11.8"
log = "0.4.27"
rustamarine = {path = "./rustamarine"}
freedesktop_entry_parser = "1.3.0"
pam = { git = "https://github.com/coffeeispower/pam-rs", version = "0.8.0" }
nix = "0.30.1"
linux-raw-sys = { version = "0.10.0", features = ["ioctl"] }
[dependencies.clay-layout]
features = ["debug"]
git = "https://github.com/coffeeispower/clay-rs"
branch = "tibs-version"
# path="./clay-rs"
[build-dependencies]
gl_generator = "0"
