[package]
name = "rustamarine"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.72.0"
cmake = "*"
pkg-config = "*"

[dev-dependencies]
rand = { version = "0.8" }

[dependencies]
gl_generator = { version="0", optional = true }

[features]
opengl_loader = ["dep:gl_generator"]

[[example]]
name = "epilepsy_vsync_test"
required-features = ["opengl_loader"]
