[package]
name = "rustamarine"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.72.0"
cmake = "*"
pkg-config = "*"
gl_generator = { version="0", optional = true }
[dev-dependencies]
rand = "0.9"

[features]
default = ["opengl_loader"]
opengl_loader = ["dep:gl_generator"]

[[example]]
name = "epilepsy_vsync_test"
required-features = ["opengl_loader"]

[[example]]
name = "mouse_cursor_example"
required-features = ["opengl_loader"]
